OPENAM-4807, CR-5046. Getting rid of last instance of ClientResource.